update to MLK week 1 assignment

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -409,7 +409,7 @@ Each week includes the following components:
     \item \textbf{Deliverables}:
     \begin{itemize}
         \item A 2-page concept map or outline that connects key claims from \textit{The New Public Service} Chapters 1--6.
-        \item A 300-word reflection identifying one tension you see between traditional PA and the New Public Service approach.
+        \item A 300-word reflection identifying one tension you see between traditional PA approaches and the New Public Service approach.
         \item Two discussion questions to bring to Week 2.
     \end{itemize}
     \item \textbf{Due}: Friday, 1/23 by 11:59 p.m.
