peer review update

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -370,7 +370,7 @@ Each week includes the following components:
         \begin{itemize}
             \item \textbf{Purpose}: Deepen understanding of the week's readings through collaborative discussion and refine synthesis thinking.
             \item \textbf{Activity}: Analyze key themes, patterns, and contradictions in the readings; discuss insights from rough drafts.
-            \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student submits two actionable suggestions and one question to Canvas by the end of class.
+            \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student shares two actionable suggestions and one question with their partner by the end of class.
         \end{itemize}
 
     \item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night)}
