--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -152,7 +152,7 @@
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
 \noindent \textbf{Email:} dpadams@fullerton.edu \\
 \noindent \textbf{Zoom ID:} 334 750 2639 \\
-\noindent \textbf{Office hours:} Mondays at 12:30--1:30, Tuesdays at 5:30--6:30, and by \href{https://dadams.io/appointments}{appointment} throughout the week. Meetings can be in-person or virtual via Zoom.
+\noindent \textbf{Office hours:} Mondays at 12:00--2:00 and 5:30--6:30, Tuesday at 12:00--2:00, and by \href{https://dadams.io/appointments}{appointment} throughout the week. Meetings can be in-person or virtual via Zoom.
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section*{Course Communication}
