updated ai language

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -331,40 +331,47 @@ Each week includes the following components:
 
 \begin{enumerate}
     \item \textbf{Annotated Bibliography (5 points; Due Monday Before Class)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
+        \item \textbf{Instructions}:
         \begin{itemize}
-            \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
-            \item \textbf{Instructions}:
+            \item For each assigned reading:
             \begin{itemize}
-                \item For each assigned reading:
+                \item Provide a citation in APA or Chicago author-date style.
+                \item Write a 150-word annotation that includes:
                 \begin{itemize}
-                    \item Provide a citation in APA or Chicago author-date style.
-                    \item Write a 150-word annotation that includes:
-                    \begin{itemize}
-                        \item A brief summary of the central argument and key points.
-                        \item Relevance to the week's topic and implications for public administration.
-                    \end{itemize}
+                    \item A brief summary of the central argument and key points.
+                    \item Relevance to the week's topic and implications for public administration.
                 \end{itemize}
-                \item \textbf{Feedback Appendix (Weeks 2--4 Required; Week 5+ Optional)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request feedback. If you prefer not to use AI, request an alternative (e.g., peer feedback or a structured self-critique) and include that in the appendix.
-                \item \textbf{Sample Prompt}:
-                \begin{quote}
-                    \texttt{``You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text.''}
-                \end{quote}
             \end{itemize}
+
+            \item \textbf{Feedback Appendix (Weeks 2--4 Required; Week 5+ Optional; Diagnostic Only)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request critique. Approved alternatives (peer feedback or a structured self-critique) are acceptable with prior notice. The appendix is for \textbf{reflection and improvement next week}, not for AI-assisted rewriting.
+
+            \item \textbf{AI Use Boundary}: You may use AI to \textbf{check accuracy}, \textbf{identify missing concepts}, and \textbf{suggest a discussion question}. You may \textbf{not} use AI to draft, rewrite, or polish your annotation text. The submitted annotation must be written by you.
+
+            \item \textbf{Sample Prompt (optional)}:
+            \begin{quote}
+                \texttt{You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text or propose replacement sentences.}
+            \end{quote}
         \end{itemize}
+    \end{itemize}
 
     \item \textbf{Rough Draft Synthesis Paper (10 points; Due Monday Before Class)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Develop an initial critical analysis integrating insights from the readings to facilitate in-class discussion.
+        \item \textbf{Instructions}:
         \begin{itemize}
-            \item \textbf{Purpose}: Develop an initial critical analysis integrating insights from the readings to facilitate in-class discussion.
-            \item \textbf{Instructions}:
+            \item Write a 3-page rough draft synthesis paper that:
             \begin{itemize}
-                \item Write a 3-page rough draft synthesis paper that:
-                \begin{itemize}
-                    \item Identifies patterns, connections, and contradictions across the readings.
-                    \item Highlights implications for public administration theory and practice.
-                \end{itemize}
-                \item This draft should be substantive but will be refined based on class discussion and further reflection.
+                \item Identifies patterns, connections, and contradictions across the readings.
+                \item Highlights implications for public administration theory and practice.
             \end{itemize}
+    
+            \item \textbf{No AI Assistance (Rough Draft)}: This draft must be written entirely by you without AI tools (no drafting, rewriting, outlining, summarizing, or editing assistance). The goal is to capture your independent reading and thinking to support Monday’s discussion.
+    
+            \item This draft will be refined based on \textbf{class discussion}, the \textbf{in-class peer review studio}, and \textbf{your own reflection} (not AI feedback).
         \end{itemize}
+    \end{itemize}
 
     \item \textbf{In-Person Class Discussion and Peer Review Studio (Monday)}
         \begin{itemize}
@@ -373,24 +380,30 @@ Each week includes the following components:
             \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student shares two actionable suggestions and one question with their partner by the end of class.
         \end{itemize}
 
-    \item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night)}
+\item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night)}
+\begin{itemize}
+    \item \textbf{Purpose}: Produce a polished critical analysis incorporating insights from class discussion.
+    \item \textbf{Instructions}:
+    \begin{itemize}
+        \item Write a 4- to 5-page final synthesis paper that:
         \begin{itemize}
-            \item \textbf{Purpose}: Produce a polished critical analysis incorporating insights from class discussion.
-            \item \textbf{Instructions}:
-            \begin{itemize}
-                \item Write a 4- to 5-page final synthesis paper that:
-                \begin{itemize}
-                    \item Refines and expands the rough draft based on class discussion.
-                    \item Demonstrates sophisticated integration of readings with deeper analysis.
-                    \item Connects theory to practice in public administration.
-                \end{itemize}
-                \item \textbf{Feedback Appendix (Required)}: Students must include feedback in an appendix attached to the final synthesis paper submission. AI feedback is recommended; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice.
-                \begin{quote}
-                    \texttt{``Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or add new content.''}
-                \end{quote}
-                \item Include all feedback used during the week (AI or other) in the appendix to the final synthesis paper.
-            \end{itemize}
+            \item Refines and expands the rough draft based on \textbf{class discussion} and the \textbf{in-class peer review studio} (not AI feedback).
+            \item Demonstrates sophisticated integration of readings with deeper analysis.
+            \item Connects theory to practice in public administration.
         \end{itemize}
+
+        \item \textbf{Feedback Appendix (Required; Diagnostic Only)}: Attach an appendix containing feedback you gathered this week. \textbf{AI feedback is recommended} as a critical review tool; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice. The appendix is for \textbf{reflection and improvement next week}, not for revising this submission.
+
+        \item \textbf{AI Use Boundary}: You may use AI to \textbf{identify strengths, gaps, counterarguments, and cross-reading connections}. You may \textbf{not} use AI to draft, rewrite, or revise any part of the Week 5 final paper. Apply AI feedback to your \textbf{next} synthesis instead.
+
+        \item Suggested AI prompt (optional):
+        \begin{quote}
+            \texttt{Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or propose replacement text.}
+        \end{quote}
+
+        \item Include \textbf{all feedback collected} during the week (AI, peer, and/or self-critique) in the appendix, along with a brief \textbf{Next-Week Plan} (5--7 bullets) describing what you will do differently in the next synthesis.
+    \end{itemize}
+\end{itemize}
 
     \item \textbf{Personal Reflection (10 points; Due Friday Night)}
         \begin{itemize}
@@ -424,19 +437,28 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
         \item 2 pages identifying 3 core concepts from the book and applying them to a real or hypothetical public service setting.
         \item Include one explicit dilemma or tradeoff a public servant faces in that setting.
     \end{itemize}
+
     \item \textbf{Part B: Decision and Practice Memo (20 points; Due Wednesday Night)}
     \begin{itemize}
         \item 3--4 pages proposing a response to the dilemma using course theory and evidence from the book.
         \item Include one paragraph on equity implications and one paragraph on implementation constraints.
     \end{itemize}
+
     \item \textbf{Reflection (Due Friday Night)}
     \begin{itemize}
         \item 250--300 words on how the book reshaped your view of frontline public service or emotional labor.
     \end{itemize}
-    \item \textbf{Feedback Appendix (Required)}: Use an AI tool for critique on Part B and include the response in your appendix. If you prefer not to use AI, request an alternative (peer feedback or structured self-critique) and include that in the appendix.
+
+    \item \textbf{Feedback Appendix (Required; Diagnostic Only)}: Attach an appendix containing critique you gathered on \textbf{Part B}. \textbf{AI feedback is recommended} as a critical review tool; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice.
+
+    \item \textbf{AI Use Boundary}: You may use AI to \textbf{evaluate} your memo (clarity, feasibility, evidence use) and to \textbf{identify} strengths, weak spots, counterarguments, or alternative approaches. You may \textbf{not} use AI to draft, rewrite, or revise any portion of Part B. Use this feedback to set 2--3 concrete improvement goals for your \textbf{next} memo.
+
+    \item Suggested AI prompt (optional):
     \begin{quote}
-        \texttt{``Review my decision and practice memo for clarity, feasibility, and use of evidence. Identify 2 strengths, 2 weak spots, and 1 alternative approach I should consider. Do not rewrite the memo.''}
+        \texttt{Review my decision and practice memo for clarity, feasibility, and use of evidence. Identify 2 strengths, 2 weak spots, and 1 alternative approach I should consider. Do not rewrite the memo or propose replacement text.}
     \end{quote}
+
+    \item Include \textbf{all feedback collected} (AI, peer, and/or self-critique) in the appendix, along with a brief \textbf{Next-Step Plan} (4--6 bullets) describing what you will do differently next time.
 \end{itemize}
 
 \paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
@@ -452,12 +474,12 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
         row{1} = {font=\bfseries, bg=gray!20}
     }
     AI Use: Do's & AI Use: Don'ts \\
-    Use AI to \textbf{give feedback} on your writing (clarity, gaps, connections). & Use AI to \textbf{write or rewrite} your assignments. \\
-    Ask AI to \textbf{suggest questions} for discussion or reflection. & Copy/paste AI text and submit it as your own work. \\
-    Cite AI when it meaningfully shaped your thinking (e.g., ``ChatGPT feedback, 2/9/26''). & Omit citation when AI influenced your work. \\
-    Use AI to \textbf{check organization, coherence, or flow}. & Rely on AI without engaging critically with course readings. \\
-    Be mindful of \textbf{biases and sustainability impacts}. & Treat AI outputs as authoritative without evaluation. \\
-    Remember: \textbf{Your voice, analysis, and synthesis must remain central.} & Assume AI can replace your own critical thinking. \\
+Use AI to \textbf{critique} your work (clarity, gaps, counterarguments, connections). & Use AI to \textbf{draft, rewrite, or polish} any submitted text. \\
+Use AI to \textbf{generate questions} for discussion or reflection. & Paste AI-generated sentences/paragraphs into an assignment. \\
+Include AI outputs in the \textbf{Feedback Appendix} when permitted. & Use AI feedback to \textbf{revise the same-week submission} when the appendix is labeled ``Diagnostic Only.'' \\
+Use AI to \textbf{check organization} and identify where your argument is thin. & Use AI to \textbf{summarize readings for you} as a substitute for doing the reading. \\
+Use AI feedback to set \textbf{next-week improvement goals}. & Omit attribution when AI feedback meaningfully shaped your planning/reflection. \\
+Remember: \textbf{your voice and reasoning must remain central}. & Treat AI outputs as authoritative without evaluation. \\
     \end{tblr}
 \end{table}
 \end{center}
@@ -625,12 +647,13 @@ All written work must be submitted in a professional format, including proper gr
 
 \subsubsection*{AI Use Policy}
 
-AI is permitted and encouraged as a learning tool, under the following guidelines:
+AI is permitted and encouraged as a learning tool \textit{within strict boundaries}:
 
 \begin{itemize}
-    \item \textbf{Allowed}: Using AI for feedback on annotated bibliographies, synthesis drafts, and reflections (see assignments for sample prompts).
-    \item \textbf{Allowed}: Using AI to brainstorm questions, highlight gaps, or check clarity and organization.
-    \item \textbf{Not Allowed}: Submitting AI-generated text as your own work or asking AI to rewrite your assignments.
+    \item \textbf{Not Allowed (Rough Drafts)}: The \textbf{initial/rough draft} for major writing assignments must be written entirely by you with \textbf{no AI assistance} (no outlining, summarizing, drafting, rewriting, or editing).
+    \item \textbf{Allowed (Diagnostic Critique)}: On assignments that include a \textbf{Feedback Appendix}, you may use AI to \textbf{critique} your work (identify strengths, gaps, counterarguments, and cross-reading connections).
+    \item \textbf{Not Allowed}: Using AI to \textbf{draft, rewrite, or polish} any portion of submitted work.
+    \item \textbf{Assignment-Specific Rule}: If the appendix is labeled \textbf{Diagnostic Only}, the AI feedback may \textbf{not} be used to revise the same-week submission; it is to improve \textbf{future} work.
     \item \textbf{Required in specific assignments}: Where a feedback appendix is required, include AI feedback or an approved alternative (peer feedback or structured self-critique).
 \end{itemize}
 
@@ -651,8 +674,8 @@ This policy is designed to ensure AI use strengthens---not substitutes---your ac
 \noindent Students are expected to engage with AI responsibly:
 
 \begin{itemize}
-    \item \textbf{Authorship}: All substantive writing must be your own. AI may provide critique, but not draft or rewrite.
-    \item \textbf{Citation}: When AI meaningfully informs your work, cite it (e.g., ``ChatGPT (GPT-5) [AI model], feedback received [date]'').
+    \item \textbf{Authorship}: All submitted prose must be written by you. AI may provide critique, but may not generate or rewrite your sentences, paragraphs, or structure.
+    \item \textbf{Attribution}: When AI feedback is used (where permitted), include it in the \textbf{Feedback Appendix} with the tool name and date (e.g., ``ChatGPT critique, 2/18/26''). Do not treat AI text as source material to incorporate into your writing.
     \item \textbf{Bias Awareness}: AI outputs reflect biases. Evaluate them critically for fairness and accuracy.
     \item \textbf{Verification}: Validate AI-suggested facts or sources before using them in your work.
     \item \textbf{Confidentiality}: Do not upload sensitive, private, or proprietary information into AI tools.
@@ -668,16 +691,17 @@ This policy is designed to ensure AI use strengthens---not substitutes---your ac
 
 \subsubsection*{Assessment of AI Use}
 
-AI use will be assessed not by how often you use it, but by how thoughtfully you integrate it into your learning:
+AI use will be evaluated by boundaries and learning, not polish:
 
 \begin{itemize}
-    \item Evidence of revision and improvement based on AI or peer feedback.
-    \item Student reflections on the usefulness and limitations of AI.
-    \item Quality of class participation, showing independent engagement with readings and theory.
-    \item Final projects that demonstrate original critical thinking, even if AI-supported feedback informed revisions.
+    \item Compliance with assignment-specific AI rules (e.g., \textbf{no AI on rough drafts}).
+    \item Quality of the \textbf{Feedback Appendix} when required (useful critique + evidence you understood it).
+    \item A brief \textbf{Next-Step Plan} showing how you will apply critique to \textbf{future} work.
+    \item Quality of class participation and in-class writing/discussion, demonstrating independent engagement with readings and theory.
+    \item Final projects that demonstrate original analysis and a consistent authorial voice.
 \end{itemize}
 
-\noindent The goal is to treat AI as a \textit{feedback partner}---a tool to sharpen your analysis, deepen your questions, and strengthen your voice in public administration.
+\noindent The goal is to treat AI as a \textit{feedback partner}---a tool to sharpen your analysis, deepen your questions, and strengthen your voice in public administration. If you cannot explain and defend your argument, evidence choices, and revisions without external support, then the work does not meet the course standard.
 
 % ========== SECTION 8: TECHNICAL COMPETENCIES ==========
 \section*{Technical Competencies}
