updated book assignment

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -440,8 +440,12 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
 
     \item \textbf{Part B: Decision and Practice Memo (20 points; Due Wednesday Night)}
     \begin{itemize}
-        \item 3--4 pages proposing a response to the dilemma using course theory and evidence from the book.
-        \item Include one paragraph on equity implications and one paragraph on implementation constraints.
+        \item{Memo}
+            \begin{itemize}
+                \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
+                \item Include one paragraph on equity implications and one paragraph on implementation constraints.
+            \end{itemize}
+        \item Feedback Appendix (Required; Diagnostic Only): Attach an appendix containing feedback you gathered this week. AI feedback is recommended as a critical review tool; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice. The appendix is for \textbf{reflection and improvement next week}, not for revising this submission.
     \end{itemize}
 
     \item \textbf{Reflection (Due Friday Night)}
@@ -449,16 +453,14 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
         \item 250--300 words on how the book reshaped your view of frontline public service or emotional labor.
     \end{itemize}
 
-    \item \textbf{Feedback Appendix (Required; Diagnostic Only)}: Attach an appendix containing critique you gathered on \textbf{Part B}. \textbf{AI feedback is recommended} as a critical review tool; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice.
 
-    \item \textbf{AI Use Boundary}: You may use AI to \textbf{evaluate} your memo (clarity, feasibility, evidence use) and to \textbf{identify} strengths, weak spots, counterarguments, or alternative approaches. You may \textbf{not} use AI to draft, rewrite, or revise any portion of Part B. Use this feedback to set 2--3 concrete improvement goals for your \textbf{next} memo.
 
     \item Suggested AI prompt (optional):
     \begin{quote}
         \texttt{Review my decision and practice memo for clarity, feasibility, and use of evidence. Identify 2 strengths, 2 weak spots, and 1 alternative approach I should consider. Do not rewrite the memo or propose replacement text.}
     \end{quote}
 
-    \item Include \textbf{all feedback collected} (AI, peer, and/or self-critique) in the appendix, along with a brief \textbf{Next-Step Plan} (4--6 bullets) describing what you will do differently next time.
+    \item Include \textbf{all feedback collected} (AI, peer, and/or self-critique) in the appendix, along with a brief \textbf{Next-Step Plan} (3--5 bullets) describing what you will do differently next time.
 \end{itemize}
 
 \paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
