updated book memo

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -440,27 +440,14 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
 
     \item \textbf{Part B: Decision and Practice Memo (20 points; Due Wednesday Night)}
     \begin{itemize}
-        \item{Memo}
-            \begin{itemize}
-                \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
-                \item Include one paragraph on equity implications and one paragraph on implementation constraints.
-            \end{itemize}
-        \item Feedback Appendix (Required; Diagnostic Only): Attach an appendix containing feedback you gathered this week. AI feedback is recommended as a critical review tool; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice. The appendix is for \textbf{reflection and improvement next week}, not for revising this submission.
-    \end{itemize}
-
+            \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
+            \item Include one paragraph on equity implications and one paragraph on implementation constraints.
+            \item No AI assistance allowed for this memo. It must be written entirely by you to capture your independent analysis of the book's concepts and their application. Feedback not required but you may share your memo with peers for feedback if desired (not AI). The goal is to produce a memo that reflects your own thinking and understanding of the book's insights as they apply to public service practice.
+        \end{itemize}
     \item \textbf{Reflection (Due Friday Night)}
     \begin{itemize}
         \item 250--300 words on how the book reshaped your view of frontline public service or emotional labor.
     \end{itemize}
-
-
-
-    \item Suggested AI prompt (optional):
-    \begin{quote}
-        \texttt{Review my decision and practice memo for clarity, feasibility, and use of evidence. Identify 2 strengths, 2 weak spots, and 1 alternative approach I should consider. Do not rewrite the memo or propose replacement text.}
-    \end{quote}
-
-    \item Include \textbf{all feedback collected} (AI, peer, and/or self-critique) in the appendix, along with a brief \textbf{Next-Step Plan} (3--5 bullets) describing what you will do differently next time.
 \end{itemize}
 
 \paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
