ussing analaysis instaed of memo

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -432,13 +432,13 @@ Each week includes the following components:
 For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, students complete an alternative assignment in place of the standard synthesis paper.
 
 \begin{itemize}
-    \item \textbf{Part A: Concept Application Memo (10 points; Due Monday Before Class)}
+    \item \textbf{Part A: Concept Application Analysis (10 points; Due Monday Before Class)}
     \begin{itemize}
         \item 2 pages identifying 3 core concepts from the book and applying them to a real or hypothetical public service setting.
         \item Include one explicit dilemma or tradeoff a public servant faces in that setting.
     \end{itemize}
 
-    \item \textbf{Part B: Decision and Practice Memo (20 points; Due Wednesday Night)}
+    \item \textbf{Part B: Decision and Practice Analysis (20 points; Due Wednesday Night)}
     \begin{itemize}
             \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
             \item Include one paragraph on equity implications and one paragraph on implementation constraints.
