final book assignment language for posting to canvas

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -440,10 +440,12 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
 
     \item \textbf{Part B: Decision and Practice Analysis (20 points; Due Wednesday Night)}
     \begin{itemize}
-            \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
-            \item Include one paragraph on equity implications and one paragraph on implementation constraints.
-            \item No AI assistance allowed for this memo. It must be written entirely by you to capture your independent analysis of the book's concepts and their application. Feedback not required but you may share your memo with peers for feedback if desired (not AI). The goal is to produce a memo that reflects your own thinking and understanding of the book's insights as they apply to public service practice.
-        \end{itemize}
+        \item 2 pages proposing a response to the dilemma using course theory and evidence from the book.
+        \item Include one paragraph on equity implications and one paragraph on implementation constraints.
+        \item \textbf{No AI assistance allowed.} This analysis must be written entirely by you to capture your independent thinking about the book's concepts and their application.
+        \item Feedback is \textbf{not required}, but you may share your analysis with peers for feedback if desired (not AI).
+    \end{itemize}
+
     \item \textbf{Reflection (Due Friday Night)}
     \begin{itemize}
         \item 250--300 words on how the book reshaped your view of frontline public service or emotional labor.
