exact prompt language

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -349,7 +349,7 @@ Each week includes the following components:
 
             \item \textbf{AI Use Boundary}: You may use AI to \textbf{check accuracy}, \textbf{identify missing concepts}, and \textbf{suggest a discussion question}. You may \textbf{not} use AI to draft, rewrite, or polish your annotation text. The submitted annotation must be written by you.
 
-            \item \textbf{Sample Prompt (optional)}:
+            \item \textbf{Use this exact prompt (optional)}:
             \begin{quote}
                 \texttt{You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text or propose replacement sentences.}
             \end{quote}
@@ -396,7 +396,7 @@ Each week includes the following components:
 
         \item \textbf{AI Use Boundary}: You may use AI to \textbf{identify strengths, gaps, counterarguments, and cross-reading connections}. You may \textbf{not} use AI to draft, rewrite, or revise any part of the Week 5 final paper. Apply AI feedback to your \textbf{next} synthesis instead.
 
-        \item Suggested AI prompt (optional):
+        \item Use this exact AI prompt (optional):
         \begin{quote}
             \texttt{Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or propose replacement text.}
         \end{quote}
