grammarly updates to posc 521

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -450,7 +450,7 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
     \end{itemize}
 \end{itemize}
 
-\paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
+\paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Tools like Grammarly are permitted for spelling, grammar, and mechanics checks only; do not use them for rewriting, paraphrasing, or style transformations. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
 
 \begin{center}
 \begin{table}[h]
@@ -467,6 +467,7 @@ Use AI to \textbf{critique} your work (clarity, gaps, counterarguments, connecti
 Use AI to \textbf{generate questions} for discussion or reflection. & Paste AI-generated sentences/paragraphs into an assignment. \\
 Include AI outputs in the \textbf{Feedback Appendix} when permitted. & Use AI feedback to \textbf{revise the same-week submission} when the appendix is labeled ``Diagnostic Only.'' \\
 Use AI to \textbf{check organization} and identify where your argument is thin. & Use AI to \textbf{summarize readings for you} as a substitute for doing the reading. \\
+Use tools like Grammarly for \textbf{spelling, grammar, and mechanics} checks. & Use Grammarly or similar tools to \textbf{rewrite, paraphrase, or transform style/structure}. \\
 Use AI feedback to set \textbf{next-week improvement goals}. & Omit attribution when AI feedback meaningfully shaped your planning/reflection. \\
 Remember: \textbf{your voice and reasoning must remain central}. & Treat AI outputs as authoritative without evaluation. \\
     \end{tblr}
@@ -642,6 +643,7 @@ AI is permitted and encouraged as a learning tool \textit{within strict boundari
     \item \textbf{Not Allowed (Rough Drafts)}: The \textbf{initial/rough draft} for major writing assignments must be written entirely by you with \textbf{no AI assistance} (no outlining, summarizing, drafting, rewriting, or editing).
     \item \textbf{Allowed (Diagnostic Critique)}: On assignments that include a \textbf{Feedback Appendix}, you may use AI to \textbf{critique} your work (identify strengths, gaps, counterarguments, and cross-reading connections).
     \item \textbf{Not Allowed}: Using AI to \textbf{draft, rewrite, or polish} any portion of submitted work.
+    \item \textbf{Allowed (Basic Mechanics)}: Tools like Grammarly are permitted for \textbf{spelling, grammar, punctuation, and formatting checks}. Do \textbf{not} use these tools for rewriting, paraphrasing, or style transformations.
     \item \textbf{Assignment-Specific Rule}: If the appendix is labeled \textbf{Diagnostic Only}, the AI feedback may \textbf{not} be used to revise the same-week submission; it is to improve \textbf{future} work.
     \item \textbf{Required in specific assignments}: Where a feedback appendix is required, include AI feedback or an approved alternative (peer feedback or structured self-critique).
 \end{itemize}
